--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,7 @@
     "src/**/*.vue",
     "tests/**/*.ts",
     "tests/**/*.tsx"
-  ],
+, "window.d.ts"  ],
   "exclude": [
     "node_modules"
   ]
